--- a/test/fixtures/pitches.yml
+++ b/test/fixtures/pitches.yml
@@ -6,7 +6,7 @@ one:
   special_price: 9.99
   active: false
   other: MyText
-  type: 
+  kind: MyString
   url1: MyString
   url2: MyString
   url3: MyString
@@ -18,7 +18,7 @@ two:
   special_price: 9.99
   active: false
   other: MyText
-  type: 
+  kind: MyString
   url1: MyString
   url2: MyString
   url3: MyString
